[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rkbx_wave"
version = "1.0.0"
description = "Dual deck waveform display for Rekordbox with live sync via rkbx_link"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "mrmilbe"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Win32 (MS Windows)",
]
dependencies = [
    "Pillow>=10.0.0",
    "construct>=2.10.0",
    "mutagen>=1.47.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "pyrekordbox>=0.4.0",
    "python-osc>=1.9.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/mrmilbe/rkbx_wave"
Repository = "https://github.com/mrmilbe/rkbx_wave"

[project.scripts]
rkbx_wave = "rkbx_wave:main"

[tool.setuptools]
py-modules = ["rkbx_wave"]
packages = ["rb_waveform_core"]
